--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  position: fixed;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --blue: #1e90ff;
+  --white: #ffffff;
+  --f_weight_bold: 600;
+  --f_weight_medium: 500;
+  --f_size_s4: 33px;
+  --f_size_s3: 20px;
+  --f_size_s2: 16px;
+  --f_size_s1: 15px;
+  --c_primary: #1e88e5;
+  --c_primary2: #f2fafa;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+#root {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
 }
